# paris-safety

./: .gitignore  README.md  README_zh.md  pyproject.toml
.github/workflows/: deploy.yml
data/: paris_locations.json
src/: fetcher.py  locator.py  main.py  map_generator.py  translator.py
