[project]
name = "paris-safety"
version = "0.1.0"
description = "Paris safety alert station - interactive map with translated crime/strike news"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "deep-translator>=1.11",
    "folium>=0.15",
    "trafilatura>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
